...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final stationAsync = ref.watch(stationDetailControllerProvider(stationId));
    final timeSeriesAsync = ref.watch(stationTimeSeriesProvider(stationId));

    return Scaffold(
      appBar: AppBar(title: const Text('Station Details')),
      body: AsyncValueWidget(
        value: stationAsync,
        data: (station) {
          return SingleChildScrollView(
            padding: const EdgeInsets.all(16.0),
            child: Column(
...
